--- a/style.css
+++ b/style.css
@@ -1,3 +1,14 @@
 body{
     font-family: "Playfair Display", serif;
+    background: black;
+    color: blue;
+    margin: 0px;
+    margin-bottom: 1000px;
+}
+.chamada{
+    background:purple ;
+    display: flex;
+    justify-content: center;
+    margin-top: 80px;
+    margin-bottom: 80px;
 }
